--- a/core/accounts/templates/accounts/account_index.html
+++ b/core/accounts/templates/accounts/account_index.html
@@ -48,16 +48,16 @@
                             <img src={{ avatar_url }} alt="" class="circle responsive-img valign profile-image-post">
                         </div>
                         <div class="input-field col-sm-10">
-                            {{ form.title }}
-                            <label for={{ form.title.id_for_label }} >Subject</label>
+                            {{ post_create_form.title }}
+                            <label for={{ post_create_form.title.id_for_label }} >Subject</label>
                         </div>
                         <div class="input-field col-sm-10">
-                            {{ form.description }}
-                            <label for={{ form.description.id_for_label }} >An introduction sentence for your text...</label>
+                            {{ post_create_form.description }}
+                            <label for={{ post_create_form.description.id_for_label }} >An introduction sentence for your text...</label>
                         </div>
                         <div class="input-field col-sm-10">
-                            {{ form.text }}
-                            <label for={{ form.text.id_for_label }} >Text...</label>
+                            {{ post_create_form.text }}
+                            <label for={{ post_create_form.text.id_for_label }} >Text...</label>
                         </div>
                     </div>
                     <div class="row">
@@ -72,8 +72,8 @@
 
                                 <div class="file-field input-field">
                                     <div class="btn">
-                                        <span for="{{ form.image.id_for_label }}"><i class="fa fa-cloud-upload"></i> {{ form.image.label }}</span>
-                                        {{ form.image }}
+                                        <span for="{{ post_create_form.image.id_for_label }}"><i class="fa fa-cloud-upload"></i> {{ post_create_form.image.label }}</span>
+                                        {{ post_create_form.image }}
                                     </div>
                                     <div class="file-path-wrapper">
                                         <input class="file-path validate" type="text">
@@ -84,7 +84,7 @@
                                 <a name="privacy" class="dropdown-toggle waves-effect waves-light btn" data-toggle="dropdown" href="#"><i class="fa fa-lock"></i> Private</a>
 
                                 <ul class="dropdown-menu" role="menu">
-                                    {% for choice in form.privacy.field.choices %}
+                                    {% for choice in post_create_form.privacy.field.choices %}
                                         <li><a href="#!"><i class="fa fa-{{ choice.1 }}"></i> {{ choice.0}}</a></li>
                                     {% endfor %}
                                 </ul>
@@ -100,13 +100,12 @@
     <!-- Blog Entries Column -->
     <div id="profile-page-wall-posts" class="card">
         <div class="col-sm-12">
-            <div id="profile-page-wall-post" class="card">
-                {% for post in post_list %}
-
+            {% for post in post_list %}
+                <div id="profile-page-wall-post" class="card">
                     <div class="card-profile-title">
                         <div class="row">
                             <div class="col-sm-1">
-                                <img src={{ avatar_url }} alt="" class="circle responsive-img valign profile-post-uer-image">
+                                <img src={{ avatar_url }} class="circle responsive-img valign profile-post-uer-image">
                             </div>
                             <div class="col-sm-10">
                                 <p class="grey-text text-darken-4 margin">{{ post.author }}</p>
@@ -129,35 +128,54 @@
                     <div class="card-content">
                         <p>{{ post.text }}</p>
                     </div>
-                    <div class="card-action row">
+                    <div class="card-action">
                         <div class="col-sm-4 card-action-share">
-                            <i class="fa fa-tags"></i>
+                            <p><i class="fa fa-tags"></i>
                             Tags:
                             {% for tag in post.tags.all %}
                                  <div class="chip">
                                     <a href="/accounts/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
                                  </div>
-                            {% empty %}
-                                <h2>Sorry, no tags yet</h2>
                             {% endfor %}
+                            <i class="fa fa-comment"></i> <a href="#" type="button" data-toggle="collapse" data-target="#comments">0</a>
+                            </p>
                         </div>
-                        <div class="input-field col s8 margin">
-                            <form action="#" >{% csrf_token %}
-                                <label for="profile-comments" class="">Comments</label>
-                                <textarea class="materialize-textarea" id="profile-comments" placeholder="Your Message" required></textarea>
-                                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+
+
+                        <div class="input-field col-sm-8 margin">
+                            <form action="/accounts/index/" method="post">{% csrf_token %}
+                                <input type="hidden" name="post_id" value="{{ post.id }}">
+                                <label for={{ comment_create_form.text.id_for_label }} class="">Comments</label>
+                                {{ comment_create_form.text }}
+                                <button class="btn waves-effect waves-light" type="submit">Submit
                                     <i class="mdi-content-send right"></i>
                                 </button>
                             </form>
 
                         </div>
                     </div>
+                    <!-- list of comments collapsable-->
+                    <div id="comments" class="collapse">
+                    `   {% for comment in post.comments.all %}
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="card-title">Commented by {{ comment.author }} - <i class="fa fa-calendar"></i>{{ comment.created_at }} </span>
+                                {{ comment.text }}
+                            </div>
+                            <div class="card-action">
+                                <a href="#">This is a link</a>
+                                <a href="#">This is a link</a>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
 
-                {% empty %}
+            {% empty %}
 
-                        <p>Sorry, no posts yet</p>
-                {% endfor %}
-            </div>
+                    <p>Sorry, no posts yet</p>
+            {% endfor %}
+
         </div>
     </div>
 
